# LavaFrame

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  LavaFrame.sln  README.md
.github/workflows/: msbuild.yml
LavaFrame/: App.rc  Camera.cpp  Camera.h  Colors.h  Export.h  GlobalState.h  LavaFrame.vcxproj  LavaFrame.vcxproj.filters  Loader.cpp  Loader.h  Main.cpp  Mat4.h  Material.h  MathUtils.h  Mesh.cpp  NEEDS REBUILD  Program.cpp  Quad.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  ShaderIncludes.h  Strint.h  Texture.cpp  Texture.h  TiledRenderer.cpp  TiledRenderer.h  Vec2.h  Vec3.h  Vec4.h  earcut.hpp  resource.h  tiny_obj_loader.h
LavaFrame/Headers/: Camera.h  Config.h  GlobalState.h  Material.h  Mesh.h  Program.h  TiledRenderer.h  hdrloader.h  tiny_obj_loader.h
LavaFrame/Sources/: Main.cpp
LavaFrame/Sources/core/: Camera.cpp  Mesh.cpp  Program.cpp  Quad.cpp  Renderer.cpp  Scene.cpp  Shader.cpp  TiledRenderer.cpp
LavaFrame/Sources/loaders/: hdrloader.cpp
LavaTask/: App.rc  LavaTask.cpp  LavaTask.vcxproj  LavaTask.vcxproj.filters  stringmanager.h
build_include/: license
build_include/assets/: cornell_box.lfs
build_include/output/: readme.txt
flareonpreview/: dllmain.cpp  flareonpreview.cpp  flareonpreview.vcxproj  flareonpreview.vcxproj.filters  shadersource.h
flareonpreview/includeheaders/: flareonpreview.h
shaders/: output.glsl  postprocess.glsl  preview.glsl  preview_flareon.glsl  progressive.glsl  renderer.glsl  tiled_renderer.glsl  tonemap.glsl
shaders/common/: anyhit.glsl  closest_hit.glsl  disney.glsl  globals.glsl  pathtrace.glsl  sampling.glsl  uniforms.glsl  vertex.glsl  viewsdorf_backend.glsl
shaders_amd/: output.glsl  postprocess.glsl  postprocess_neutral.glsl  preview_flareon.glsl  progressive.glsl  renderer.glsl  tiled_renderer.glsl  tonemap.glsl
shaders_amd/common/: disney.glsl  flareon_backend.glsl  globals.glsl  intersection.glsl  pathtrace.glsl  vertex.glsl
